@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>Cucumber-book-blog</groupId>
-	<artifactId>Cucumber-book-blog</artifactId>
+	<groupId>Automation-JVM-Cucumber</groupId>
+	<artifactId>Automation-JVM-Cucumber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Cucumber-book-blog</name>
-	<description>Cucumber-book-blog</description>
+	<name>Automation-JVM-Cucumber</name>
+	<description>Automation-JVM-Cucumber</description>
 
 	<dependencies>
 		<dependency>
@@ -52,71 +52,4 @@
             </plugins>
     </build>
  
-	<!-- 
-	  	<build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14</version>
-                <configuration>
-     				<skip>false</skip>
-   			    </configuration>
-                <executions>
-                    <execution>
-                        <id>acceptance-test</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <skip>false</skip>
-                            <forkCount>3</forkCount>
-                            <reuseForks>false</reuseForks>
-                            <argLine>-Duser.language=en</argLine>
-                            <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=256m</argLine>
-                            <argLine>-Dfile.encoding=UTF-8</argLine>
-                            <useFile>false</useFile>
-                            <includes>
-                                <include>**/*Test.class</include>
-                            </includes>
-                            <testFailureIgnore>true</testFailureIgnore>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-   
-     
-    <build>
-    <plugins>
-
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-failsafe-plugin</artifactId>
-    <version>2.17</version>
-    <configuration>
-        <forkCount>3</forkCount>
-        <reuseForks>true</reuseForks>
-        <<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-         <includes>
-         <include>**/*Test.class</include>
-         </includes>
-    </configuration>
-  </plugin>
-</plugins>
-    </build>
-    -->
 </project>
